--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hyperlane-xyz/utils": "^1.5.3",
     "@hyperlane-xyz/widgets": "^1.5.0",
     "@metamask/jazzicon": "https://github.com/jmrossy/jazzicon#7a8df28974b4e81129bfbe3cab76308b889032a6",
+    "@pushprotocol/restapi": "latest",
     "@rainbow-me/rainbowkit": "0.12.16",
     "@solana/spl-token": "^0.3.8",
     "@solana/wallet-adapter-base": "^0.9.22",
