--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.31",
     "@solana/wallet-adapter-wallets": "^0.19.16",
     "@solana/web3.js": "^1.77.0",
+    "@tableland/sdk": "^4.5.3-dev.0",
     "@tanstack/react-query": "^4.29.7",
     "bignumber.js": "^9.0.2",
     "buffer": "^6.0.3",
